# efficient-state-propagation-lockable

./: BUILDING  CMakeLists.txt
lib/: bruteforce.cpp  bruteforce.hpp  propagation_lockable.cpp  propagation_lockable.hpp  util.cpp  util.hpp
paper/: an_efficient_algorithm_for_state_propagation_on_graph_with_lockable_vertices.tex
paper/graph/: ba_coverage_1000000_10_0.1.eps  ba_coverage_1000000_10_0.1_exp_1.1.eps  ba_coverage_1000000_10_0.1_exp_2.eps  ba_coverage_1000000_10_0.1_exp_3.eps  ba_coverage_1000000_10_0.1_power_1.eps  ba_coverage_1000000_10_0.1_power_2.eps  ba_coverage_1000000_10_0.1_power_3.eps  ba_coverage_1000000_10_0.eps  ba_crit_power.eps  ba_degree.eps  ba_q_1000000_10.eps  ba_q_1000000_10_0.1.eps  ba_q_1000000_10_0.1_exp_2.eps  ba_q_1000000_10_0.1_exp_3.eps  ba_q_1000000_10_0.1_power_1.eps  ba_q_1000000_10_0.1_power_2.eps  ba_q_1000000_10_0.1_power_3.eps  uniform_coverage_1000000_10000000.eps  uniform_coverage_1000000_10000000_0.1.eps  uniform_coverage_1000000_10000000_0.1_exp_2.eps  uniform_coverage_1000000_10000000_0.1_exp_3.eps  uniform_coverage_1000000_10000000_0.1_power_1.eps  uniform_coverage_1000000_10000000_0.1_power_2.eps  uniform_coverage_1000000_10000000_0.1_power_3.eps  uniform_coverage_1000000_10000000_0.eps  uniform_degree.eps  uniform_q_1000000_10000000.eps  uniform_q_1000000_10000000_0.1.eps  uniform_q_1000000_10000000_0.1_exp_2.eps  uniform_q_1000000_10000000_0.1_exp_3.eps  (+3 more)
slide/: slide.tex
src/: compare_bf.cpp  compare_crit.cpp  coverage.cpp  example.cpp  graph_stat.cpp  verify.cpp
src_old/: original.cpp  original_tree.cpp
(+6 files in other folders)
